// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Composer string is correctly translated to DOM Multi-line formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <div>
    <span
      style="color: #3da4ab;"
    >
      =
    </span>
  </div>
  <div>
    <span
      style="color: #eb6d00;"
    >
      A1: 
    </span>
  </div>
  <div>
    <span
      style="color: #eb6d00;"
    >
      A2
    </span>
  </div>
  <div>
    <span />
  </div>
  <div>
    <span
      style="color: #3da4ab;"
    >
      +
    </span>
    <span
      style="color: light-dark(#000000, #ffffff);"
    >
      SUM
    </span>
    <span
      class="highlight-parenthesis-flag"
      style="color: light-dark(#000000, #ffffff);"
    >
      (
    </span>
  </div>
  <div>
    <span
      style="color: #02c39a;"
    >
      5
    </span>
    <span
      class="highlight-parenthesis-flag"
      style="color: light-dark(#000000, #ffffff);"
    >
      )
    </span>
  </div>
</div>
`;

exports[`Composer string is correctly translated to DOM Multi-line string 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <div>
    <span />
  </div>
  <div>
    <span>
      I'm
    </span>
  </div>
  <div>
    <span>
      multi
    </span>
  </div>
  <div>
    <span />
  </div>
  <div>
    <span>
      line
    </span>
  </div>
  <div>
    <span />
  </div>
</div>
`;

exports[`Composer string is correctly translated to DOM Selection indicator in multi-line formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <div>
    <span
      style="color: #3da4ab;"
    >
      =
    </span>
  </div>
  <div>
    <span />
  </div>
  <div>
    <span
      class="selector-flag"
      style="color: light-dark(#000000, #ffffff);"
    />
  </div>
</div>
`;

exports[`Composer string is correctly translated to DOM Selection indicator in simple formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <div>
    <span
      class="selector-flag"
      style="color: #3da4ab;"
    >
      =
    </span>
  </div>
</div>
`;

exports[`Composer string is correctly translated to DOM Simple formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <div>
    <span
      style="color: #3da4ab;"
    >
      =
    </span>
    <span
      style="color: #02c39a;"
    >
      1
    </span>
    <span
      style="color: light-dark(#000000, #ffffff);"
    >
       
    </span>
    <span
      style="color: #3da4ab;"
    >
      +
    </span>
    <span
      style="color: light-dark(#000000, #ffffff);"
    >
       
    </span>
    <span
      style="color: #eb6d00;"
    >
      A1
    </span>
  </div>
</div>
`;

exports[`Composer string is correctly translated to DOM Simple string 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <div>
    <span>
      I'm a simple content
    </span>
  </div>
</div>
`;
